<resources>
    <string name="app_name">MobLab</string>
    <string name="login">Login</string>
    <string name="sign_up">Create a new account</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="name">Name</string>
    <string name="ingredient">Ingredient</string>
    <string name="add">Add</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
